src/test/deca/codegen/invalid/return-methodWithoutReturn.ima
Une méthode de type de retour non void n'a rien retourné
